--- a/android-app/app/src/main/res/layout/activity_detail.xml
+++ b/android-app/app/src/main/res/layout/activity_detail.xml
@@ -15,4 +15,10 @@
         tools:layout_editor_absoluteY="131dp"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"/>
+
+    <TextView
+        android:id="@+id/imageText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="TextView" />
 </RelativeLayout>
