--- a/android-app/app/src/main/res/layout/activity_main.xml
+++ b/android-app/app/src/main/res/layout/activity_main.xml
@@ -4,6 +4,7 @@
     android:id="@+id/android_gridview_example"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#a6a6a6"
     android:orientation="vertical">
 
     <android.support.v7.widget.Toolbar
