--- a/android-app/app/src/main/res/layout/activity_detail.xml
+++ b/android-app/app/src/main/res/layout/activity_detail.xml
@@ -9,13 +9,12 @@
 
     <ImageView
         android:id="@+id/imageView1"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
+        android:layout_width="350dp"
+        android:layout_height="350dp"
+        android:layout_centerInParent="true"
         app:srcCompat="@android:color/black"
         tools:layout_editor_absoluteX="141dp"
-        tools:layout_editor_absoluteY="131dp"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"/>
+        tools:layout_editor_absoluteY="131dp" />
 
     <TextView
         android:id="@+id/imageText"
