--- a/android-app/app/src/main/res/layout/activity_main.xml
+++ b/android-app/app/src/main/res/layout/activity_main.xml
@@ -15,6 +15,7 @@
         android:elevation="4dp"
         android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
         android:gravity="center_vertical|start"
+        android:layoutDirection="rtl"
         app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
 
 <android.support.v4.widget.SwipeRefreshLayout
