--- a/android-app/app/src/main/res/layout/activity_detail.xml
+++ b/android-app/app/src/main/res/layout/activity_detail.xml
@@ -20,5 +20,6 @@
         android:id="@+id/imageText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:padding="20dp"
         android:text="TextView" />
 </RelativeLayout>
