--- a/android-app/app/src/main/res/layout/activity_launch.xml
+++ b/android-app/app/src/main/res/layout/activity_launch.xml
@@ -35,7 +35,7 @@
         android:layout_height="200dp"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="200dp"
-        android:src="@mipmap/ic_launcher" />
+        android:src="@drawable/ic_launcher" />
 
     <ImageView
         android:id="@+id/imageView2"
